k8s/artx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artx
spec:
  replicas: 1 # 파드의 복제본 3개 유지 -> 컨테이너의 개수가 아니다.
  selector:
    matchLabels:
      app: artx # 해당 레이블 이름을 가진 파드만 선택한다.
  template:
    metadata:
      labels:
        app: artx # 특정 Key & Value를 통해 레이블 설정 가능 + selector에 의해 찾아질 수 있도록 metadata의 labels 설정한다.
    spec:
      containers:
        - name: artx
          image: dlworhd/artx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: artx
spec:
  selector:
    app: artx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
