k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artx
spec:
  selector:
    matchLabels:
      app: artx
  template:
    metadata:
      labels:
        app: artx
    spec:
      containers:
        - name: artx
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_9dd4764a80fb
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: artx-volume
              mountPath: /app/images
      volumes:
        - name: artx-volume
          persistentVolumeClaim:
            claimName: artx-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: artx
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: artx
