k8s/backend.yml

apiVersion: v1
kind: Namespace
metadata:
  name: artx-namespace
---
apiVersion: v1
kind: Deployment
metadata:
  name: artx-deployment
  namespace: artx-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artx
    template:
      metadata:
        labels:
          app: artx
      spec:
        containers:
          - name: artx
            image: https://krmp-d2hub-idock.9rum.cc/dev-test/repo_13e0eb8b2b5e
            imagePullPolicy: Always
            ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: artx-service
  namespace: artx-namespace
spec:
  selector:
    app: artx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
