k8s/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  replicas: 1
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
              subPath: mysql
          resources:
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 3306
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  type: ClusterIP # 외부에서 해당 서비스에 접근할 수 없다. 클러스터 내부에서만 접근 가능하다.
  selector:
    app: mariadb
  ports:
    - port: 3306
